// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScaleComponent renders V2 throughput component 1`] = `
<Fragment>
  <Stack
    tokens={
      Object {
        "childrenGap": 30,
      }
    }
  >
    <ThroughputInputComponent
      autoPilotTiersList={Array []}
      autoPilotUsageCost={
        <span>
          Your 
          container
           throughput will automatically scale between 400 RU/s and 4,000 RU/s based on the workload needs, as long as your storage does not exceed 50GB. If your storage exceeds 50GB, we will upgrade the maximum (and minimum) throughput thresholds to the next available value. For more details, see
           
          <a
            href="https://aka.ms/cosmos-autoscale-info"
            rel="noreferrer"
            target="_blank"
          >
            documentation
          </a>
          .
        </span>
      }
      canExceedMaximumValue={false}
      costsVisible={true}
      isAutoPilotSelected={false}
      isEnabled={true}
      isFixed={false}
      label="Throughput (6,000 - 40,000 RU/s)"
      maximum={40000}
      minimum={6000}
      requestUnitsUsageCost={<React.Fragment />}
      selectedAutoPilotTier={1}
      setAutoPilotSelected={[Function]}
      setAutoPilotTier={[Function]}
      setThroughput={[Function]}
      showAsMandatory={false}
      showAutoPilot={false}
      spendAckChecked={false}
      throughput={
        StatefulValue {
          "baseline": 1000,
          "current": 1000,
          "getStringValue": [Function],
          "isValid": true,
        }
      }
    />
    <Stack
      tokens={
        Object {
          "childrenGap": 5,
        }
      }
    >
      <Text>
        Storage capacity
      </Text>
      <Text>
        <b>
          Fixed
        </b>
      </Text>
    </Stack>
  </Stack>
</Fragment>
`;

exports[`ScaleComponent renders V3 throughput component 1`] = `
<Fragment>
  <Stack
    tokens={
      Object {
        "childrenGap": 30,
      }
    }
  >
    <ThroughputInputAutoPilotV3Component
      autoPilotUsageCost={
        <span>
          Your 
          container
           throughput will automatically scale from
           
          <b>
            400
             RU/s (10% of max RU/s) -
             
            4000
             RU/s
          </b>
           
          based on usage. 
          <br />
          <br />
          After the first 
          40
           GB of data stored, the max RU/s will be automatically upgraded based on the new storage value.
          <a
            href="https://aka.ms/cosmos-autoscale-info"
            rel="noreferrer"
            target="_blank"
          >
             
            Learn more
          </a>
          .
        </span>
      }
      canExceedMaximumValue={false}
      costsVisible={true}
      isAutoPilotSelected={false}
      isEnabled={true}
      label="Throughput (6,000 - 40,000 RU/s)"
      maxAutoPilotThroughput={
        StatefulValue {
          "baseline": 4000,
          "current": 4000,
          "getStringValue": [Function],
          "isValid": true,
        }
      }
      maximum={40000}
      minimum={6000}
      overrideWithAutoPilotSettings={false}
      overrideWithProvisionedThroughputSettings={false}
      requestUnitsUsageCost={<React.Fragment />}
      setAutoPilotSelected={[Function]}
      setMaxAutoPilotThroughput={[Function]}
      setThroughput={[Function]}
      showAutoPilot={false}
      spendAckChecked={false}
      throughput={
        StatefulValue {
          "baseline": 1000,
          "current": 1000,
          "getStringValue": [Function],
          "isValid": true,
        }
      }
    />
    <Stack
      tokens={
        Object {
          "childrenGap": 5,
        }
      }
    >
      <Text>
        Storage capacity
      </Text>
      <Text>
        <b>
          Fixed
        </b>
      </Text>
    </Stack>
  </Stack>
</Fragment>
`;
